# detection-fidelity-score

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  Readme V2  SPECIFICATION.md  Test_4624_manual.py  WHITE_PAPER.md  cleanup.ps1  decision.json  detection-fidelity-score.yam  detection-fidelity-score.yaml  dfs_cli.py  dfs_generated_files.txt  pyproject.toml  requirements.txt  signals.stage  simulate_dfs.py  test_cve_manual.py  test_docker_manual.py  test_engine.py  test_infra_manual.py  test_new_modules_manual.py  test_sysmon3_manual.py  tests.yml
Detection Pack (v0.1)/: DFS-PS-ENC-DL-001  README.md  detection.yml  dfs.yml
Detection Pack (v0.2)/: README.md  RUNDLL32 detection  detection.yml  dfs.yml  tests
cli/: dfs.py
connectors/: dfs_gatekeeper.py  dfs_openai_guard.py
core/: dfs_scoring_model.md  model.py  pyproject.toml
dfs_core/: .gitignore  __init.py__.py  __init__.py  abac_token.py  agent_firewall.py  agent_pipeline_sim.py  audit_ledger.py  circuit_breaker.py  decision_card.py  dfs_ai.py  dfs_ai_v2.py  engine.py  evaluate.py  explain.py  guardrail.py  guardrails.py  io.py  liability_ledger.py  pipeline.py  policy.py  scoring.py  simulate.py  stream.py
docs/: DFS_Model.md  DFS_SOC_Playbook_v1.1.md  DFS_Technical_Specification_v1.0.docx  DFS_Technical_Specification_v1.0.md  DFS_Whitepaper_v0.1.md  Detection_Survivability_Infrastructure_v1.1.md  README_V2.md  SPECIFICATION.md  Telemetry_Contract_Model_v1.1.md  agents_and_signal_trust.md  automation-governance-model.md  core-model.md  detection-fidelity-problem.md  dfs-principles.md  (+10 more)
(+85 files in other folders)
